Fixed the vertical align of select, textarea and input.

--- a/scss/form/_input.scss
+++ b/scss/form/_input.scss
@@ -29,6 +29,7 @@ $siimple-input-radius: $siimple-default-border-radius;
   border-radius: $siimple-input-radius;
   outline: 0px;
   background-color: $siimple-grey;
+  vertical-align: top;
 
   &--fluid {
     width: 100%;
