--- a/scss/form/_select.scss
+++ b/scss/form/_select.scss
@@ -29,6 +29,7 @@ $siimple-select-radius: $siimple-default-border-radius;
   border-radius: $siimple-select-radius;
   outline: 0px;
   background-color: $siimple-grey;
+  vertical-align: top;
 
   &--fluid {
     width: 100%;
